# actions-tutorial

./: .gitignore  README.md  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  publish.yml
tests/: test_simple_math.py
