[tool.poetry]
name = "actions-tutorial"
version = "0.1.0"
description = "A dummy tutorial to learn Github Actions"
authors = ["lewoudar <lewoudar@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
